# BridgewellML

./: .gitignore  CHANGELOG  CMakeLists.txt  DESCRIPTION  DESCRIPTION.in  NAMESPACE  configure  configure.ac  ftprl.pxd  ftprl.pyx  matrix.pxd  matrix.pyx  setup.py
R/: FTPRL.R  FTPRLCensoredRegression.R  FTPRLLinearRegression.R  FTPRLLogisticRegression.R  FTPRLNeuronNetwork.R  RcppExports.R  logloss.R  zzz.R
ftprl/: logisticregression.pyx  matrix.pxd  matrix.pyx
include/: CensoredRegression.hpp  DenseMatrix.hpp  FTPRL.hpp  LinearRegression.hpp  LogisticRegression.hpp  LogisticRegressionPoly2.hpp  Matrix.hpp  NeuronNetwork.hpp
man/: FTPRL.Rd  FTPRLLogisticRegression.Rd  FTPRLNeuronNetwork.Rd  logloss.Rd
src/: FTPRLCensoredRegression.cpp  FTPRLLinearRegression.cpp  FTPRLLogisticRegression.cpp  FTPRLNeuronNetwork.cpp  FTPRLProxy.cpp  LogisticRegressionProxy.hpp  Makevars  NumericMatrixProxy.hpp  RcppExports.cpp  ScipySparseCSRMatrixProxy.hpp  ftprl.pxd  hello.cpp  logisticregression.pyx  matrix.pyx
test/: CMakeLists.txt  Makefile  censoredregression.cpp  logisticregression.cpp  logisticregressionpoly2.cpp  neuronnetwork.cpp
tests/: censored_iris.R  censroed_iris.R  csr_matrix.py  iris.NA.R  iris.R  logisticregression.test.py
